Aggiunte le classi per l'armatura e artefatti. Migliorato equip per gestire il caso dell'equipaggiamento dell'armatura e artefatti